tg-714. [P1] Error 400 cuando se quiere borrar un diagnóstico con epicrisis creada

--- a/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -3,10 +3,12 @@
 		<mat-list-item>
 			<span class="capitalize-first-letter">
 				{{ mainDiagnosis.snomed.pt }}
-			</span>
-			<button mat-icon-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
-				<mat-icon fontSet="material-icons-outlined">note_add</mat-icon>
-			</button>
+			</span>			
+			<ng-container *ngIf="editable">
+				<button mat-icon-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
+					<mat-icon fontSet="material-icons-outlined">note_add</mat-icon>
+				</button>
+			</ng-container>
 		</mat-list-item>
 	</mat-list>
 	<ng-template #noInfo>
