--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -69,7 +69,7 @@
 					</ng-container>
 					<ng-container *featureFlag="'mainDiagnosisRequired'">
 						<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
-							<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId">
+							<app-main-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId" [editable]="!epicrisisDoc">
 							</app-main-diagnosis-summary>
 						</ng-container>
 					</ng-container>
