--- a/back-end/hospital-api/src/main/resources/templates/epicrisis-minsal.html
+++ b/back-end/hospital-api/src/main/resources/templates/epicrisis-minsal.html
@@ -28,7 +28,7 @@
         <strong>- Sexo: </strong><label  th:text="${patient.person.gender.description}"></label><br/>
     </div>
 
-    <h3 [translate]="'internaciones.epicrisis.diagnosticos.TITLE_PRINCIPAL'"> </h3>
+    <h3 th:text="${#strings.defaultString(#messages.msgOrNull('document.pdf.maindiagnosis.title.minsal'),'Diagnóstico principal')}"></h3>
     <div class="row" th:if="${mainDiagnosis == null}">
         <dl>
             <dd><p >Sin información</p></dd>
@@ -45,6 +45,7 @@
     </div>
 
     <h3 [translate]="'internaciones.epicrisis.diagnosticos.TITLE'"></h3>
+    <h3 th:text="${#strings.defaultString(#messages.msgOrNull('document.pdf.diagnosis.title.minsal'),'Diagnósticos')}"></h3>
     <div class="row" th:if="${#lists.isEmpty(diagnosis)}">
         <dl class="lista" >
             <dd><p >Sin cambios registrados</p></dd>
