tg-629 crea componente documents summary

--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -88,6 +88,9 @@
 					</ng-container>
 				</div>
 			</div>
+			<ng-container *hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR']">
+				<app-documents-summary [internmentEpisodeId]="internmentEpisodeId"></app-documents-summary>
+			</ng-container>
 		</div>
 	</section>
 </app-content>
