tg-756 cambio de redacción
(cherry picked from commit 26ab0e877f38f5e85a7a393dad073632770eb2f9)

--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -33,6 +33,7 @@ $default-color: 50;
 			padding: 20px 5px;
 			text-align: center;
 			font-weight: bold;
+			color: #A8A8A8;
 			background-color: white;
 		}
 	}
