--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.scss
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.scss
@@ -1,6 +1,8 @@
 mat-card {
 	mat-card-header {
-		flex-direction: row-reverse;
-		justify-content: flex-end;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		max-height: 24px;
 	}
 }
