--- a/front-end/webapp/src/app/modules/internacion/components/alergias-summary/alergias-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/alergias-summary/alergias-summary.component.html
@@ -1,4 +1,4 @@
-<app-summary-card (openInNew)="openDialog()" [header]="alergiasSummary">
+<app-summary-card (openInNew)="openDialog()" [actionIcon]="true" [header]="alergiasSummary">
 	<app-table [model]="tableModel" *ngIf="tableModel?.data.length > 0 else noInfo"></app-table>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
