--- a/front-end/webapp/src/app/modules/internacion/components/concepts-search/concepts-search.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/concepts-search/concepts-search.component.html
@@ -5,7 +5,7 @@
 		(click)="clear()">
 		<mat-icon>close</mat-icon>
 	</button>
-	<button mat-flat-button type="button" color="primary" matSuffix (click)="openDialog()">
+	<button mat-flat-button type="button" color="primary" matSuffix (click)="emitSearch()">
 		<span class="uppercase" [translate]="'buttons.SEARCH'"></span>
 	</button>
 </mat-form-field>
