--- a/front-end/webapp/src/app/modules/internacion/components/diagnostico-principal/diagnostico-principal.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/diagnostico-principal/diagnostico-principal.component.html
@@ -3,8 +3,7 @@
 	<mat-card-content>
 		<app-concepts-search *ngIf="!diagnosis else mainDiagnosis"
 			[label]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'"
-			[eclFilter]="SEMANTICS_CONFIG.diagnosis"
-			(onSelect)=setConcept($event)>
+		 	(search)="openSearchDialog($event)">
 		</app-concepts-search>
 		<ng-template #mainDiagnosis>
 			<form [formGroup]="form">
