--- a/front-end/webapp/src/app/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -4,7 +4,7 @@
 			<h2 class="page-title" [translate]="'internaciones.nota-evolucion.TITLE'"></h2>
 			<h3 [translate]="'internaciones.nota-evolucion.SUBTITLE'"></h3>
 		</section>
-		<section id="diagnosticos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
+		<section id="diagnosticos" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','PROFESIONAL_DE_SALUD']">
 			<app-diagnosticos [(diagnosis)]="diagnosticos"></app-diagnosticos>
 		</section>
 		<section id="observations" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR']">
@@ -63,8 +63,7 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-		<section id="signos-vitales"
-			*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
+		<section id="signos-vitales" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
 			<h2 [translate]="'internaciones.anamnesis.vital-signs.form.TITLE'"></h2>
 			<mat-card>
 				<mat-card-content class="vital-signs" formGroupName="vitalSigns">
@@ -141,8 +140,7 @@
 				</mat-card-content>
 			</mat-card>
 		</section>
-		<section id="datos-antropometricos"
-			*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
+		<section id="datos-antropometricos" *hasRole="['ESPECIALISTA_MEDICO','ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
 			<h2 [translate]="'internaciones.anamnesis.datos-antropometricos.TITLE'"></h2>
 			<mat-card class="datos-antropometricos-card">
 				<mat-card-content formGroupName="anthropometricData">
