tg-796 [FE] Estilos de botones en pantallas de alta

--- a/front-end/webapp/src/app/modules/internacion/components/medical-discharge/medical-discharge.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/medical-discharge/medical-discharge.component.html
@@ -31,13 +31,14 @@
 						<mat-error [translate]="'forms.REQUIRED'"></mat-error>
 					</mat-form-field>
 				</div>
-
-			<button mat-stroked-button color="secondary" type="button" (click)="back()">
-				<span [translate]="'buttons.BACK'"></span>
-			</button>
-			<button mat-raised-button color="primary">
-				<span [translate]="'buttons.CONTINUE'"></span>
-			</button>
+				<div class="form-buttons">
+					<button mat-stroked-button color="secondary" type="button" (click)="back()">
+						<span [translate]="'buttons.BACK'"></span>
+					</button>
+					<button mat-raised-button color="primary">
+						<span [translate]="'buttons.CONTINUE'"></span>
+					</button>
+				</div>
 			</form>
 		</section>
 		<section>
