tg-798 Corrige boton editar en diagnostico principal para rol Profesional de la salud

--- a/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -3,9 +3,10 @@
 		<mat-list-item>
 			<span class="capitalize-first-letter">
 				{{ mainDiagnosis.snomed.pt }}
-			</span>			
+			</span>
 			<ng-container *ngIf="editable">
-				<button mat-icon-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
+				<button *hasRole="[ 'ESPECIALISTA_MEDICO' ]" mat-icon-button color="primary"
+					(click)="goToClinicalEvaluation(mainDiagnosis.id)">
 					<mat-icon fontSet="material-icons-outlined">note_add</mat-icon>
 				</button>
 			</ng-container>
