tg-803 cambios ficha de internacion agregar evaluacion clinica diagnostico principal ahora es boton background color al documento activo en listado de documentos agrega archivo de traduccion para tarjeta de diagnostico principal

--- a/front-end/webapp/src/assets/styles/mat-mixins.scss
+++ b/front-end/webapp/src/assets/styles/mat-mixins.scss
@@ -26,6 +26,18 @@ $default-color: 50;
 	}
 }
 
+@mixin mat-selection-list($theme) {
+	$palette: map-get($theme, accent);
+
+	mat-selection-list {
+		.mat-list-single-selected-option {
+			&, &:hover, &:focus {
+				background-color: mat-color($palette, 100);
+			}
+		}
+	}
+}
+
 @mixin no-data($theme) {
 	$palette: map-get($theme, primary);
 	app-no-data {
