--- a/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -1,17 +1,18 @@
 <app-summary-card [header]="mainDiagnosticosSummary">
-	<mat-list *ngIf="(mainDiagnosis$ | async) as mainDiagnosis else noInfo">
-		<mat-list-item>
-			<span class="capitalize-first-letter">
+	<mat-card *ngIf="(mainDiagnosis$ | async) as mainDiagnosis else noInfo">
+		<mat-card-content>
+			<div class="mat-h3 capitalize-first-letter">
 				{{ mainDiagnosis.snomed.pt }}
-			</span>
-			<ng-container *ngIf="editable">
-				<button *hasRole="[ 'ESPECIALISTA_MEDICO' ]" mat-icon-button color="primary"
-					(click)="goToClinicalEvaluation(mainDiagnosis.id)">
-					<mat-icon fontSet="material-icons-outlined">note_add</mat-icon>
+			</div>
+		</mat-card-content>
+		<mat-card-actions fxLayout="row-reverse" *ngIf="editable">
+			<ng-container *hasRole="['ESPECIALISTA_MEDICO']">
+				<button mat-raised-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
+					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.ADD_CLINICAL_ASSESTMENT'"></span>
 				</button>
 			</ng-container>
-		</mat-list-item>
-	</mat-list>
+		</mat-card-actions>
+	</mat-card>
 	<ng-template #noInfo>
 		<app-no-data></app-no-data>
 	</ng-template>
