--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -84,7 +84,7 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId" [editable]="!epicrisisDoc">
+						<app-diagnosis-summary [internmentEpisodeId]="internmentEpisodeId" [editable]="!epicrisisDoc && editDiagnosisSummary$">
 						</app-diagnosis-summary>
 					</ng-container>
 					<ng-container
