tg-805 FIX Rol enfermero adulto mayor no ve el card de antecedentes personales

--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -55,7 +55,7 @@
 						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-antropometricos-summary>
 					</ng-container>
-					<ng-container *hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD']">
+					<ng-container *hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR']">
 						<app-antecedentes-personales-summary [internmentEpisodeId]="internmentEpisodeId">
 						</app-antecedentes-personales-summary>
 					</ng-container>
