tg-794 agrega popup para cargar signos vitales

--- a/front-end/webapp/src/app/modules/internacion/components/signos-vitales-summary/signos-vitales-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/signos-vitales-summary/signos-vitales-summary.component.html
@@ -1,4 +1,4 @@
-<app-summary-card [header]="signosVitalesSummary">
+<app-summary-card [header]="signosVitalesSummary" [actionIcon]="true" (openInNew)="openDialog()">
 	<mat-card-content>
 		<div fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.xs="center center" fxLayout.xs="column">
 			<app-signo-vital-current-previous
