--- a/front-end/webapp/src/app/modules/internacion/components/signos-vitales-summary/signos-vitales-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/signos-vitales-summary/signos-vitales-summary.component.html
@@ -1,5 +1,6 @@
 <app-summary-card [header]="signosVitalesSummary"
 				  [canEdit]="['ENFERMERO', 'ENFERMERO_ADULTO_MAYOR', 'ESPECIALISTA_MEDICO']"
+				  [editable]="editable"
 				  (openInNew)="openDialog()">
 	<mat-card-content>
 		<div fxLayout="row wrap" fxLayoutAlign="space-evenly" fxLayoutAlign.xs="center center" fxLayout.xs="column">
