--- a/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/webapp/src/app/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -58,12 +58,14 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId">
+						<app-signos-vitales-summary [internmentEpisodeId]="internmentEpisodeId"
+													[editable]="epicrisisDoc?.confirmed">
 						</app-signos-vitales-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId">
+						<app-antropometricos-summary [internmentEpisodeId]="internmentEpisodeId"
+													 [editable]="epicrisisDoc?.confirmed">
 						</app-antropometricos-summary>
 					</ng-container>
 					<ng-container *hasRole="['ESPECIALISTA_MEDICO','ENFERMERO','PROFESIONAL_DE_SALUD','ENFERMERO_ADULTO_MAYOR']">
@@ -100,7 +102,9 @@
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
-						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"></app-alergias-summary>
+						<app-alergias-summary [internmentEpisodeId]="internmentEpisodeId"
+											  [editable]="epicrisisDoc?.confirmed">
+						</app-alergias-summary>
 					</ng-container>
 					<ng-container
 						*hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD']">
