--- a/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/summary-card/summary-card.component.html
@@ -6,9 +6,11 @@
 				<span>{{ header.title | translate }}</span>
 			</div>
 		</mat-card-title>
-		<button mat-icon-button *hasRole="canEdit" (click)="openInNew.emit()">
-			<mat-icon fontSet="material-icons-outlined">open_in_new</mat-icon>
-		</button>
+		<ng-container *ngIf="!editable">
+			<button mat-icon-button *hasRole="canEdit" (click)="openInNew.emit()">
+				<mat-icon fontSet="material-icons-outlined">open_in_new</mat-icon>
+			</button>
+		</ng-container>
 	</mat-card-header>
 	<ng-content></ng-content>
 </mat-card>
