tg-815 add pantalla para cambiar diagnostico principal de internacion

--- a/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
+++ b/front-end/webapp/src/app/modules/internacion/components/main-diagnosis-summary/main-diagnosis-summary.component.html
@@ -10,6 +10,9 @@
 				<button mat-raised-button color="primary" (click)="goToClinicalEvaluation(mainDiagnosis.id)">
 					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.ADD_CLINICAL_ASSESTMENT'"></span>
 				</button>
+				<button mat-raised-button color="primary" (click)="goToChangeMainDiagnosis()">
+					<span [translate]="'internaciones.internacion-paciente.main-diagnosis.actions.CHANGE'"></span>
+				</button>
 			</ng-container>
 		</mat-card-actions>
 	</mat-card>
