--- a/front-end/webapp/src/app/modules/core/dialogs/confirm-dialog/confirm-dialog.component.html
+++ b/front-end/webapp/src/app/modules/core/dialogs/confirm-dialog/confirm-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>{{ data.title }}</h1>
 <div mat-dialog-content>
-		<mat-label>{{ data.content }}</mat-label>
+		<div innerHTML="{{ data.content }}"></div>
 </div>
-<div mat-dialog-actions>
-	<button mat-button [mat-dialog-close]="false">Cancelar</button>
-	<button mat-button [mat-dialog-close]="true" cdkFocusInitial color="primary">{{data.okButtonLabel}}</button>
+<div mat-dialog-actions align="end">
+	<button mat-button [mat-dialog-close]=false>Cancelar</button>
+	<button mat-raised-button [mat-dialog-close]=true cdkFocusInitial color="primary">{{data.okButtonLabel}}</button>
 </div>
